# patron

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
inputs/: easy.btor  reg_en.bad.btor
src/: constraints.rs  main.rs  random.rs
