[package]
name = "patron"
version = "0.1.0"
edition = "2021"

[dependencies]
patronus = {  version = "0.18.5" }
clap = { version = "4.5.14", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["union"] }
petgraph = { version = "0.6.5" , features = []}
rand = {  version = "0.8.5", features = [] }
rand_xoshiro = {  version = "0.6.0" }